refactor(web): migrate remaining api types to generated types
